...
        loginButton.setTitle("Войти", for: .normal)
        loginButton.titleLabel?.font = .systemFont(ofSize: 17, weight: .bold)
        loginButton.backgroundColor = .ypWhite
        loginButton.tintColor = .ypBlack
        loginButton.layer.cornerRadius = 16
        loginButton.layer.masksToBounds = true
        loginButton.accessibilityIdentifier = "Authenticate"
        loginButton.addTarget(self, action: #selector(loginButtonTapped), for: .touchUpInside)
        
        [uselessLogo, loginButton].forEach {
            $0.translatesAutoresizingMaskIntoConstraints = false
            view.addSubview($0)
        }
...
