...

extension WebViewViewController {
    private func setupUI() {
        view.backgroundColor = .ypBlack
        
        webView.navigationDelegate = self
        webView.accessibilityIdentifier = "UnsplashWebView"
        
        progressView.progress = 0
        progressView.progressTintColor = .systemBlue
        
        [webView, progressView].forEach {
            $0.translatesAutoresizingMaskIntoConstraints = false
...
