...
    }()
    
    private let backButton: UIButton = {
        let button = UIButton()
        button.setImage(UIImage(resource: .navBackButtonWhite), for: .normal)
        button.tintColor = .ypWhite
        button.accessibilityIdentifier = "navBackButtonWhite"
        return button
    }()
    
    private let shareButton: UIButton = {
        let button = UIButton()
        button.setImage(UIImage(resource: .sharingButton), for: .normal)
...
